udpkg (0.018) unstable; urgency=low

  * Don't use di_exec_shell_log for -f, because it has undefined behvaior
    that does not include printing out what dpkg is supported to print
    out. This should un-break the floppy retreiver.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 02:24:46 -0500

udpkg (0.017) unstable; urgency=low

  * Karsten Merker
    - fix mipsel architecture detection for "udpkg --print-architecture"
      (udpkg wrongly reported "mips" instead of "mipsel" on mipsel systems)

 -- Karsten Merker <merker@debian.org>  Sat, 1 Nov 2003 22:15:03 +0100

udpkg (0.016) unstable; urgency=low

  * Matt Kraai
    - Check the return values of commands (closes: #197922).
    - Use di_exec_shell_log instead of system.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 19 Oct 2003 17:47:02 +0200

udpkg (0.015) unstable; urgency=low

  * Move to Standards-Version 3.6.0, converting changelog to UTF-8
  * Sebastian Ley
    - Really output nothing if setting UDPKG_QUIET
    - Pass the exitcode of postinst scripts when they fail

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 28 Sep 2003 14:47:30 +0200

udpkg (0.014) unstable; urgency=low

  * Bastian Blank
    - add "exec" to the configure calls, ash isn't able to optimize the fork
      away if it should execute only one command
  * Tollef Fog Heen
    - Add powerpc to xlattbl (closes: #194933)
  * Petter Reinholdtsen
    - Add myself as uploader.

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 22 Jul 2003 09:09:06 +0200

udpkg (0.013) unstable; urgency=low

  * Bastian Blank
    - use tar -z
    - builds .list only once (Closes: #190030)
  * Martin Sjögren
    - Add compile-time flag for the -r command (remove package). This also
      means we don't have to generate the .list files at all.

 -- Bastian Blank <waldi@debian.org>  Sun, 04 May 2003 14:54:09 +0200

udpkg (0.012) unstable; urgency=low

  * Print the package name if its postinst exits unsuccessfully.